# bookstore2

./: .dockerignore  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: settings.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/test_viewset/: test_order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: product.py
product/serializers/: product_serializer.py
product/tests/test_viewset/: test_product_viewset.py
product/viewsets/: __init__.py  product_viewset.py
